Updated MapGen's and structures.